--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>金太郎のポートフォリオサイト</title>
     <link rel="icon" href="favicon.ico">
     <meta name="discription" content="金太郎のポートフォリオサイトです">
-    <link rel="stylesheet" href="css/styles.css"
+    <link rel="stylesheet" href="css/styles.css">
    
   </head>
   <body>
